--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -1,39 +1,42 @@
-#本服务为在线服务，需连接互联网
-
 
 #服务端口
 server:
-  port: 18081
+  port: 8081
 
-jasypt:
-  encryptor:
-    password: cmsz
-
-
-#以太坊
-eth:
-#在线节点URL
-  url: http://127.0.0.1:8546 #https://api.myetherapi.com/eth
-#钱包公钥地址
-  address:  "0xb1b537b8b2344e2ec68b29577d0d3b5afa85549e"
-
-#代币
-token:
-  #代币小数位数,与智能合约保持一致
-  decimals: 18
-
-#比特币
-bit:
-  rpc:
-    user: test
-    password: test
-    url: http://120.132.120.253:19332
-  addr: mh6RMN6KRnxhZ4wibzJvKLdfdUdJeWQ3xR
-#查询手续费API
-  feeUrl: https://bitcoinfees.21.co/api/v1/fees/recommended
- #默认交易大小
-  txSize: 226
-  usdt:
-    txSize: 257
-
+spring:
+  datasource:
+    url: jdbc:mysql://121.201.80.40:3306/pe?autoReconnect=true&allowMultiQueries=true&useSSL=true
+    username: root
+    password: 123456
+  jpa:
+    database: mysql
+    show-sql: true
+    generate-ddl: true
+  redis:
+    #数据库索引
+    database: 0
+    host: 127.0.0.1
+    port: 6379
+    password:
+    jedis:
+      pool:
+        #最大连接数
+        max-active: 8
+        #最大阻塞等待时间(负数表示没限制)
+        max-wait: -1
+        #最大空闲
+        max-idle: 8
+        #最小空闲
+        min-idle: 0
+sms:
+  local:
+    url: http://smssh1.253.com/msg/send/json
+    username: N6374474
+    password: 11
+    sign: 11
+  foreign:
+    url: 11
+    username: 11
+    password: 11
+    sign: 11
 
