--- a/pom.xml
+++ b/pom.xml
@@ -24,11 +24,16 @@
         <java.version>1.8</java.version>
     </properties>
 
-    <dependencies>
-        <dependency>
+    <dependencies> 
+    	<dependency>
+    		<groupId>org.apache.maven.plugins</groupId>
+    		<artifactId>maven-resources-plugin</artifactId>
+   			<version>2.6</version>
+		</dependency>
+        <!-- <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
-        </dependency>
+        </dependency> -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-cache</artifactId>
