--- a/pom.xml
+++ b/pom.xml
@@ -87,7 +87,11 @@
             <artifactId>core</artifactId>
             <version>3.3.3</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcprov-jdk15on</artifactId>
+            <version>1.60</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
