--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -6,9 +6,9 @@ server:
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/pe?autoReconnect=true&allowPublicKeyRetrieval=true&serverTimezone=Asia/Shanghai&allowMultiQueries=true&useSSL=false
+    url: jdbc:mysql://127.0.0.1:3306/pe_app?autoReconnect=true&allowPublicKeyRetrieval=true&serverTimezone=Asia/Shanghai&allowMultiQueries=true&useSSL=false
     username: root
-    password: xc123456
+    password: ROOT
 
   jpa:
     database: mysql
@@ -35,9 +35,9 @@ spring:
 sms:
   local:
     url: http://smssh1.253.com/msg/send/json
-    username: N6374474
-    password: 11
-    sign: 11
+    username: CN5364552
+    password: 4QIoRjbzBe3509
+    sign: 【253云通讯】
   foreign:
     url: 11
     username: 11
