--- a/pom.xml
+++ b/pom.xml
@@ -138,19 +138,20 @@
         <resources>
             <resource>
                 <directory>src/main/resources/</directory>
+                <filtering>false</filtering>
+                <excludes>
+                    <exclude>application*.yml</exclude>
+                </excludes>
+            </resource>
+            <resource>
+                <directory>src/main/resources/</directory>
                 <filtering>true</filtering>
                 <includes>
                     <include>application.yml</include>
                     <include>application-${profileActive}.yml</include>
                 </includes>
             </resource>
-            <resource>
-                <directory>src/main/resources/</directory>
-                <filtering>false</filtering>
-                <excludes>
-                    <exclude>application*.yml</exclude>
-                </excludes>
-            </resource>
+
 
         </resources>
         <plugins>
@@ -162,9 +163,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <configuration>
-
                     <excludes>
                         <exclude>application*.yml</exclude>
+                        <exclude>logback*.xml</exclude>
                     </excludes>
                 </configuration>
             </plugin>
