--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -3,6 +3,9 @@
 server:
   port: 8081
 
+logging:
+  config: config/logback-spring.xml
+
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
