完善打包逻辑 修改redis缓存时间的单位为秒 增加单元测试

--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -3,12 +3,15 @@
 server:
   port: 8081
 
+logging:
+  config: config/logback-spring.xml
+
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/pe_app?autoReconnect=true&allowPublicKeyRetrieval=true&serverTimezone=Asia/Shanghai&allowMultiQueries=true&useSSL=false
+    url: jdbc:mysql://127.0.0.1:3306/pe_app?autoReconnect=true&characterEncoding=UTF-8&allowPublicKeyRetrieval=true&serverTimezone=Asia/Shanghai&allowMultiQueries=true&useSSL=false
     username: root
-    password: ROOT
+    password: shenjia888
 
   jpa:
     database: mysql
