--- a/package.xml
+++ b/package.xml
@@ -12,7 +12,7 @@
             <includes>
                 <include>application.yml</include>
                 <include>application-${profileActive}.yml</include>
-                <include>*.xml</include>
+                <include>logback-spring.xml</include>
             </includes>
             <outputDirectory>/config</outputDirectory>
         </fileSet>
